fix(collection): stop from wrapping on mobile

--- a/public/_assets/css/_components.scss
+++ b/public/_assets/css/_components.scss
@@ -177,8 +177,12 @@
     flex-wrap: wrap;
     gap: 0.5rem;
 
+    &_no-wrap {
+        flex-wrap: nowrap;
+    }
+
     &__button {
-        display: inline;
+        display: inline-block;
 
         width: 88px;
         height: 31px;
